# django_geonames_address

./: .gitignore  MANIFEST.in  README.rst  manage.py  setup.cfg
django_geonames_address/: asgi.py  settings.py  urls.py  wsgi.py
geonames_address/: __init__.py  apps.py  forms.py  models.py
geonames_address/locale/it/LC_MESSAGES/: django.mo  django.po
geonames_address/migrations/: 0001_initial.py  0002_auto_20220421_1655.py
geonames_address/templates/geonames_address/components/: geonames_address.js
geonames_address/templates/geonames_address/widgets/: municipality.html  nic.html  simple_municipality.html
test_geonames_address/: apps.py
