[metadata]
name = django-geonames-address
version = 0.6
description = Extends django-geonames-cities with models for address, national identification codes with widgets
long_description = file: README.rst
url = https://github.com/davidegalletti/django_geonames_address
author = Davide Galletti
author_email = davide@c4k.it
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = geonames_address
python_requires = >=3.6
install_requires =
    Django >= 3.0
